# pyexiv2bind

./: .clang-tidy  .dockerignore  .gitignore  .gitmodules  .pylintrc  CHANGELOG.rst  CMakeLists.txt  Jenkinsfile  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  build_python_module.cmake  conanfile.py  cppcheck_suppression_file.txt  external_exiv2.cmake  external_exiv22.cmake  external_expat.cmake  external_zlib.cmake  glue.cpp  pyproject.toml  pytest.ini  requirements-ci.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: build_wheels.yml  tox_matrix.yml
builders/: compiler_info.py  conan_libs.py  deps.py  errors.py  local_backend.py  pybind11_builder.py
ci/docker/cpp/: Dockerfile
ci/docker/deploy/devpi/test/windows/source/: Dockerfile  packages.config
ci/docker/linux/: Dockerfile
ci/docker/linux/jenkins/: Dockerfile
ci/docker/linux/jenkins/conan/: profile.ini
ci/docker/linux/package/: Dockerfile
ci/docker/linux/package/conan/amd64/: profile.ini
ci/docker/linux/package/conan/arm64/: profile.ini
ci/docker/linux/test/: Dockerfile
ci/docker/linux/tox/: Dockerfile  apt-packages.txt  requirements-conan-build.txt  update_conan_compiler.py
ci/docker/linux/tox/conan/: profile.ini
ci/docker/linux/tox/conan/amd64/: profile.ini
ci/docker/linux/tox/conan/arm64/: profile.ini
ci/docker/shared/: startup.bat
ci/docker/shared/chocolatey/: Install-Python.ps1  packages.config  python.xml  verifyenv.ps1  visual_studio.config
ci/docker/shared/conan/: ensure_compiler_support_by_conan.py  remotes.json
ci/docker/shared/python/: requirements-ci.txt  requirements-extra.txt
ci/docker/windows/tox/: Dockerfile
ci/docker/windows/tox/chocolatey/: packages.config  verifyenv.ps1
ci/docker/windows/tox/conan/: profile.ini  python.ini
ci/docker/windows/tox/msvc/: install_msvc.ps1  visual_studio_config.json
ci/docker/windows/tox_no_vs/: Dockerfile
ci/jenkins/: defaultParameters.yaml
ci/jenkins/scripts/: configs.groovy  devpi.groovy  packaging.groovy  sonarqube.groovy  tox.groovy
ci/scripts/: create_uv_config.sh  new-uv-global-config.ps1
cmake/: build_python_module.cmake  external_exiv2.cmake  external_exiv22.cmake  external_expat.cmake
cmake_scripts/: build_python_module.cmake  external_exiv22.cmake
contrib/: build_linux_wheels.sh  build_mac_wheel.sh  build_windows.ps1  get_linked_exiv2_version.py
contrib/resources/package_for_linux/: Dockerfile
contrib/resources/windows/tox/: Dockerfile
contrib/resources/windows/tox/msvc/: install_msvc.ps1
docs/: Makefile  make.bat
docs/source/: conf.py  examples.rst  index.rst  modules.rst  py3exiv2bind.rst
patches/: Make_Subproject_possible.patch  don't_install_docs.patch  patch_zlib.cmake  tiff_resolution_path.patch
py3exiv2bind/: __init__.py  __version__.py  core.pyi  icc.py  image.py  metadata.py
py3exiv2bind/core/: CMakeLists.txt  core.cpp  glue.cpp  glue.h
py3exiv2bind/core/glue/: AbsMetadataStrategy.cpp  AbsMetadataStrategy.h  CMakeLists.txt  ExifStrategy.cpp  ExifStrategy.h  IPTC_Strategy.cpp  IPTC_Strategy.h  Image.cpp  Image.h  Image2.cpp  Image2.h  MetadataProcessor.cpp  MetadataProcessor.h  MetadataStrategies.h  XmpStrategy.cpp  XmpStrategy.h  glue.cpp  glue.h  make_dictionary.h
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt  requirements-extra.txt  requirements_conan.txt  requirements_tox.txt
scripts/: build_linux_wheels.sh  build_mac_wheel.sh  build_windows.ps1  get_linked_exiv2_version.py
scripts/resources/package_for_linux/: Dockerfile
scripts/resources/package_for_linux/scripts/: build-wheel.sh
scripts/resources/windows/tox/: Dockerfile
scripts/resources/windows/tox/chocolatey/: packages.config
scripts/resources/windows/tox/conan/: profile.ini  python.ini
scripts/resources/windows/tox/msvc/: install_msvc.ps1  visual_studio_config.json
scripts/resources/windows/tox/powershell_modules/python_helpers/: python_helpers.psm1
scripts/resources/windows/tox/scoop/: scoopfile.json  verifyenv.ps1
src/: CMakeLists.txt  core.cpp  glue.cpp  glue.h  py3exiv2bind.cpp  setup.py
src/py3exiv2bind/: __init__.py  core.cpp  core.pyi  icc.py  image.py
src/py3exiv2bind/core/: CMakeLists.txt  core.cpp  core.h
src/py3exiv2bind/core/glue/: CMakeLists.txt  ExifStrategy.cpp  IPTC_Strategy.cpp  IPTC_Strategy.h  Image.cpp  MetadataProcessor.cpp  MetadataProcessor.h  MetadataStrategies.h  XmpStrategy.cpp  glue.cpp  glue.h  glue_execeptions.h
tests/: CMakeLists.txt  conftest.py  test-core.cpp  test_basic.cpp  test_common.py  test_core.py  test_editing.cpp  test_icc.py  test_image.py  test_image2.py  test_make_dictionary.cpp  test_metadata_processor.cpp  test_run.py  tests-main.cpp
tests/python_tests/: test_common.py  test_core.py  test_run.py
utilities/: try_building_exiv2_latest.cmake
