[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "ninja",
    "uiucprescon.build @ https://github.com/UIUCLibrary/uiucprescon_build/archive/refs/tags/v0.2.5.tar.gz",
    "cmake<4.0",
    "conan>=1.50.0,<2.0"
]
build-backend = "uiucprescon.build"

[project]
name = "py3exiv2bind"
version = "0.1.15.dev0"
requires-python = '>=3.9'
dependencies = []
readme = "README.rst"
license = "NCSA"
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Exiv2 bindings for Python3"

[project.urls]
Download = "https://github.com/UIUCLibrary/pyexiv2bind"

[tool.setuptools]
include-package-data = false
packages = [
    "py3exiv2bind",
]
zip-safe = false
package-dir = {"py3exiv2bind" = "src/py3exiv2bind"}

[tool.setuptools.package-data]
py3exiv2bind = ["py.typed", "core.pyi"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--verbose"
norecursedirs = "thirdparty"
filterwarnings =[
    "error",
    "ignore::Warning",
]
junit_family="xunit1"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src"

[tool.cibuildwheel]
test-requires = [
    "pytest",
]
test-command = [
    "pytest {package}/tests -o pythonpath="
]
build-frontend = "build"
skip = [
    "cp36-*",
    "cp37-*",
    "cp38-*",
    "pp*",
    "*-win32",
    "*-musllinux*",
    "*-manylinux_i686"
]
environment-pass = ["CONAN_COMPILER_LIBCXX", "CONAN_COMPILER_VERSION", "CONAN_USER_HOME"]

[tool.cibuildwheel.macos]

before-all = [
    "python3 -m venv /tmp/ciwheelbuilder/py3exiv2bind/venv",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/python -m pip install wheel",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/python -m pip install -r requirements-dev.txt",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/conan profile new $ENVTMPDIR/.conan/profiles/default --detect --force",
    "if [ -z \"$CONAN_COMPILER_VERSION\" ]; then : ; else /tmp/ciwheelbuilder/py3exiv2bind/venv/bin/conan profile update settings.compiler.version=$CONAN_COMPILER_VERSION default; fi",
    ". /tmp/ciwheelbuilder/py3exiv2bind/venv/bin/activate && conan install ./ --build missing --install-folder=$CONAN_BUILD_INFO_DIR"
]
[tool.cibuildwheel.macos.environment]
ENVTMPDIR="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_USER_HOME="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_DEFAULT_PROFILE_PATH="/tmp/ciwheelbuilder/py3exiv2bind/.conan/profiles/default"
CONAN_BUILD_INFO_DIR="/tmp/ciwheelbuilder/py3exiv2bind/build/"
MACOSX_DEPLOYMENT_TARGET="10.15"

[tool.cibuildwheel.windows]
before-all = [
    "pip install wheel",
    "pip install -r requirements-dev.txt",
    "conan profile new default --detect --force",
    "conan profile update settings.compiler.version=%CONAN_COMPILER_VERSION% default",
    "conan install ./ --build missing",
]
[tool.cibuildwheel.windows.environment]
CONAN_USER_HOME="$TEMP/conan"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-all = [
    "cc --version", "cc -dumpfullversion -dumpversion",
    "pip3 install uv",
    "uvx --index-strategy unsafe-best-match --python 3.11 --with-requirements requirements-dev.txt conan profile new /tmp/ciwheelbuilder/py3exiv2bind/.conan/profiles/default --detect",
    "if [ -z \"$CONAN_COMPILER_LIBCXX\" ]; then : ; else uvx --index-strategy unsafe-best-match --python 3.11  --with-requirements requirements-dev.txt conan profile update settings.compiler.libcxx=$CONAN_COMPILER_LIBCXX default; fi",
    "if [ -z \"$CONAN_COMPILER_VERSION\" ]; then : ; else uvx --index-strategy unsafe-best-match --python 3.11  --with-requirements requirements-dev.txt  conan profile update settings.compiler.version=$CONAN_COMPILER_VERSION default; fi",
    "uvx --index-strategy unsafe-best-match --python 3.11 --with-requirements requirements-dev.txt conan profile show default",
    "uvx --index-strategy unsafe-best-match --python 3.11 --with-requirements requirements-dev.txt conan install ./ --build missing",

]
[tool.cibuildwheel.linux.environment]
CONAN_USER_HOME="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_DEFAULT_PROFILE_PATH="/tmp/ciwheelbuilder/py3exiv2bind/.conan/profiles/default"
CONAN_BUILD_INFO_DIR="/tmp/ciwheelbuilder/py3exiv2bind/build/"
PYTHONFAULTHANDLER="True"
#
