[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "ninja",
     'uiucprescon.build @ https://github.com/UIUCLibrary/uiucprescon_build/releases/download/v0.2.6/uiucprescon_build-0.2.6-py3-none-any.whl',
    "cmake<4.0",
#    "conan>=1.50.0,<2.0"
    "conan>=2.0"
]
build-backend = "uiucprescon.build"

[project]
name = "py3exiv2bind"
version = "0.1.15.dev0"
requires-python = '>=3.9'
dependencies = []
readme = "README.rst"
license = "NCSA"
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Exiv2 bindings for Python3"

[project.urls]
Download = "https://github.com/UIUCLibrary/pyexiv2bind"

[tool.setuptools]
include-package-data = false
packages = [
    "py3exiv2bind",
]
zip-safe = false
package-dir = {"py3exiv2bind" = "src/py3exiv2bind"}

[tool.setuptools.package-data]
py3exiv2bind = ["py.typed", "core.pyi"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--verbose"
norecursedirs = "thirdparty"
filterwarnings =[
    "error",
    "ignore::Warning",
]
junit_family="xunit1"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src"

[tool.cibuildwheel]
test-requires = [
    "pytest",
]
test-command = [
    "pytest {package}/tests -o pythonpath="
]
build-frontend = "build"
skip = [
    "cp36-*",
    "cp37-*",
    "cp38-*",
    "pp*",
    "*-win32",
    "*-musllinux*",
    "*-manylinux_i686"
]
environment-pass = ["CONAN_COMPILER_LIBCXX", "CONAN_COMPILER_VERSION", "CONAN_USER_HOME"]

[tool.cibuildwheel.macos]

before-all = [
    "python3 -m venv /tmp/ciwheelbuilder/py3exiv2bind/venv",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/python -m pip install --disable-pip-version-check uv",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/uvx --constraint=requirements-dev.txt conan profile detect --exist-ok",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/uvx --constraint=requirements-dev.txt conan install conanfile.py --build missing -pr:b=default -of /tmp/ciwheelbuilder/py3exiv2bind/tmp",
    "-rm -rf /tmp/ciwheelbuilder/py3exiv2bind/tmp",
]

before-build = [
    "[ -f CMakeUserPresets.json ] && rm CMakeUserPresets.json"
]

[tool.cibuildwheel.macos.environment]
ENVTMPDIR="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_USER_HOME="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_DEFAULT_PROFILE_PATH="/tmp/ciwheelbuilder/py3exiv2bind/.conan2/profiles/default"
CONAN_BUILD_INFO_DIR="/tmp/ciwheelbuilder/py3exiv2bind/build/"
MACOSX_DEPLOYMENT_TARGET="10.15"

[tool.cibuildwheel.windows]
before-all = [
    "pip install --disable-pip-version-check uv",
    "uvx --constraint=requirements-dev.txt --with cmake conan profile detect --exist-ok",
    "uvx --constraint=requirements-dev.txt --with cmake conan install conanfile.py --build missing -pr:b=default -of build\\conan\\temp",
    "rmdir /S /Q build\\conan\\temp",
]
before-build = [
    "if exist CMakeUserPresets.json del CMakeUserPresets.json"
]

[tool.cibuildwheel.windows.environment]
CONAN_USER_HOME="$TEMP/conan"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-all = [
    "cc --version", "cc -dumpfullversion -dumpversion",
    "pip3 install --disable-pip-version-check uv",
    "uvx --index-strategy unsafe-best-match --constraint=requirements-dev.txt --with cmake conan profile detect --exist-ok",
    "uvx --index-strategy unsafe-best-match --constraint=requirements-dev.txt --with cmake conan install ./ --build missing",

]
[tool.cibuildwheel.linux.environment]
CONAN_USER_HOME="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_DEFAULT_PROFILE_PATH="/tmp/ciwheelbuilder/py3exiv2bind/.conan2/profiles/default"
CONAN_BUILD_INFO_DIR="/tmp/ciwheelbuilder/py3exiv2bind/build/"
PYTHONFAULTHANDLER="True"
#
