[build-system]
requires = [
    "setuptools>=77.0.0",
    "wheel",
    "ninja",
    "uiucprescon.build @ https://github.com/UIUCLibrary/uiucprescon_build/releases/download/v0.4.0/uiucprescon_build-0.4.0-py3-none-any.whl",
    "cmake<4.0",
#    "conan>=1.50.0,<2.0"
    "conan>=2.0"
]
build-backend = "uiucprescon.build"

[project]
name = "py3exiv2bind"
version = "0.1.15.dev0"
requires-python = '>=3.9'
dependencies = []
readme = "README.rst"
license = "NCSA"
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Exiv2 bindings for Python3"

[project.urls]
Download = "https://github.com/UIUCLibrary/pyexiv2bind"

[dependency-groups]
test = [
    "pytest",
    "pytest-bdd",
    "coverage",
]
docs = ["sphinx", "setuptools", "toml; python_version < '3.11'"]
tox = ["tox"]
dev = [
    {include-group = "docs"},
    {include-group = "tox"},
    {include-group = "test"},
    "bandit",
    "flake8",
    "gcovr",
    "importlib-metadata>=0.12; python_version < '3.8'",
    "lxml",
    "macholib ; sys_platform == 'darwin'",
    "mypy",
    "pylint",
]
conan =["conan>=2.0", "cmake<4.0"]
cibuildwheel = ["cibuildwheel"]
package = ["delocate ; sys_platform == 'darwin'"]
publish = ["twine"]

ci = [
    {include-group = "dev"},
    {include-group = "publish"},
    {include-group = "conan"},
    "uiucprescon.build @ https://github.com/UIUCLibrary/uiucprescon_build/releases/download/v0.4.0/uiucprescon_build-0.4.0-py3-none-any.whl",
    "pybind11",
    "pysonar",
]

[tool.setuptools]
include-package-data = false
packages = [
    "py3exiv2bind",
]
zip-safe = false
package-dir = {"py3exiv2bind" = "src/py3exiv2bind"}

[tool.setuptools.package-data]
py3exiv2bind = ["py.typed", "core.pyi"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]
addopts = "--verbose"
norecursedirs = "thirdparty"
filterwarnings =[
    "error",
    "ignore::Warning",
]
junit_family="xunit1"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
mypy_path = "src"

[tool.cibuildwheel]
test-requires = [
    "pytest",
]
test-command = [
    "pytest {package}/tests -o pythonpath="
]
build-frontend = "build"
skip = [
    "cp36-*",
    "cp37-*",
    "cp38-*",
    "pp*",
    "*-win32",
    "*-musllinux*",
    "*-manylinux_i686"
]
environment-pass = ["CONAN_COMPILER_LIBCXX", "CONAN_COMPILER_VERSION", "CONAN_USER_HOME"]

[tool.cibuildwheel.macos]

before-all = [
    "python3 -m venv /tmp/ciwheelbuilder/py3exiv2bind/venv",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/python -m pip install --disable-pip-version-check uv",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/uv run --only-group conan conan profile detect --exist-ok",
    "/tmp/ciwheelbuilder/py3exiv2bind/venv/bin/uv run --only-group conan conan install conanfile.py --build missing -pr:b=default -of /tmp/ciwheelbuilder/py3exiv2bind/tmp",
    "rm -rf /tmp/ciwheelbuilder/py3exiv2bind/tmp",
]

before-build = [
    "[ -f CMakeUserPresets.json ] && rm CMakeUserPresets.json"
]

[tool.cibuildwheel.macos.environment]
ENVTMPDIR="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_USER_HOME="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_DEFAULT_PROFILE_PATH="/tmp/ciwheelbuilder/py3exiv2bind/.conan2/profiles/default"
CONAN_BUILD_INFO_DIR="/tmp/ciwheelbuilder/py3exiv2bind/build/"
MACOSX_DEPLOYMENT_TARGET="10.15"

[tool.cibuildwheel.windows]
before-all = [
    "pip install --disable-pip-version-check uv",
    "uv run --only-group conan conan profile detect --exist-ok",
    "uv run --only-group conan conan install conanfile.py --build missing -pr:b=default -of build\\conan\\temp",
    "rmdir /S /Q build\\conan\\temp",
]
before-build = [
    "if exist CMakeUserPresets.json del CMakeUserPresets.json"
]

[tool.cibuildwheel.windows.environment]
CONAN_USER_HOME="$TEMP/conan"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28"
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-all = [
    "cc --version", "cc -dumpfullversion -dumpversion",
    "pip3 install --disable-pip-version-check uv",
    "uv run --only-group conan conan profile detect --exist-ok",
    "uv run --only-group conan conan install conanfile.py --build missing -of /tmp/ciwheelbuilder",
    "rm -rf /tmp/ciwheelbuilder/py3exiv2bind/tmp",
]
before-build = [
    "[ -f CMakeUserPresets.json ] && rm CMakeUserPresets.json"
]

[tool.cibuildwheel.linux.environment]
CONAN_USER_HOME="/tmp/ciwheelbuilder/py3exiv2bind"
CONAN_DEFAULT_PROFILE_PATH="/tmp/ciwheelbuilder/py3exiv2bind/.conan2/profiles/default"
CONAN_BUILD_INFO_DIR="/tmp/ciwheelbuilder/py3exiv2bind/build/"
PYTHONFAULTHANDLER="True"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "conanfile.py" },
    { file = "CMakeLists.txt" },
    { dir = "src/py3exiv2bind/core/**/*.cpp" },
    { file = "src/py3exiv2bind/core/**/*.h" },
    { file = "src/py3exiv2bind/core/**/CMakeLists.txt" },
]