[metadata]
name = py3exiv2bind
version = 0.1.0b
url = https://github.com/UIUCLibrary/pyexiv2bind
download_url = https://github.com/UIUCLibrary/pyexiv2bind
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Exiv2 bindings for Python3
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[options]
zip_safe = False
packages = py3exiv2bind

[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1
