[metadata]
name = py3exiv2bind
version = 0.1.7.dev2
url = https://github.com/UIUCLibrary/pyexiv2bind
download_url = https://github.com/UIUCLibrary/pyexiv2bind
author = University Library at The University of Illinois at Urbana Champaign: Preservation Services
author_email = prescons@library.illinois.edu
description = Exiv2 bindings for Python3
long_description = file: README.rst
license = University of Illinois/NCSA Open Source License
maintainer = Henry Borchers
maintainer_email = hborcher@illinois.edu

[options]
zip_safe = False


[aliases]
test=pytest

[build_sphinx]
source-dir = docs/source
build-dir  = build/docs
all_files  = 1

[tool:pytest]
testpaths = tests
addopts = --verbose
norecursedirs = thirdparty
filterwarnings =
    error
    ignore::Warning
junit_family=xunit1